--- a/style.css
+++ b/style.css
@@ -1,36 +1,59 @@
 .background {
-    background-image:url(./back.jpg);
+    /*
+    background-image:url(./back2.jpg);
     position: relative;
-    background-repeat:no-repeat;
-    background-size:100% 100vh;
+    background-repeat:repeat;
+    background-size:10%;
+    */
+    margin: 0px;
+    background-color: aqua;
+}
+
+header{
+    display:block;
+    height:50%;
+    background-color:black;
+    
+    
+
 }
 
 
 #titlu{
+    position: relative;
+    top: 0px;
     text-align: center;
-    font-size: 50px;
+    font-size: 400%;
     font-family: 'Exo 2';
 }
 
 .margin-cont{
     position: relative;
-    left: 100px;
+    left: 20%;
+}
+
+.margin-cont div{
+    position: relative;
+    left: -30%;
+
 }
 
 .margin-cont div h2{
 
-   	position: relative;
-   	bottom: 10px;
+       position: relative;
+       bottom: 10px;
 }
 
 .margin-log_in {
-    position: relative;
-    right:400px;
+    position: absolute;
+    left: 70%;
+    
+
 }
 
 .margin-log_in img{
-    width: 128px;
-    height: 128px;
+    width: 300px;
+    height: 300px;
 }
 
 
@@ -38,11 +61,51 @@
 	position: relative;
 	bottom: 20px;
 	display: inline-block;
-	height: 40px;
+	height: 30px;
 	width: 150%;
 
 }
-.logo img
-{
-    display: block;
+
+.logo img{
+    position: relative;
+    left: -15%;
+    width: 20%;
+    height: 500%;
+        
+    
+}
+
+img:hover{
+background: red;
+
+}
+
+.submitButton{
+position: absolute;
+left: 65%;
+bottom: -2%;
+background:    #202a34;
+background:    -webkit-linear-gradient(#248eec, #202a34 50%, #248eec);
+background:    linear-gradient(#248eec, #202a34 50%, #248eec);
+border:        1px solid #556699;
+border-radius: 10px;
+box-shadow:    0 3px #444444;
+width:         100px;
+height:        30px;
+color:         #ffffff;
+display:       inline-block;
+font:          normal "Open Sans", sans-serif;
+font-size: 100%;
+text-align:    center;
+text-shadow:   1px 1px #000000;
+
+}
+
+.submitButton:hover {
+    background: #5b3bb3;
+    text-decoration: none;
+  }
+
+#LogIn{
+
 }
