--- a/style.css
+++ b/style.css
@@ -1,157 +1,158 @@
-body
+body, html,section
 {
-     margin: 0px;
+    height: 100%;
+    margin: 0;
+    
 }
 
 
 header{
+    overflow: hidden;
     display:block;
     height:60px;
     width: 100%;
-    background-color:   #ffffff ;
-    backface-visibility: solid;
+    background: #fcda9c;
     position: fixed;
     top:0%;
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
     border-style:solid;
-    opacity: 1;
-    overflow: hidden;
-    order: 1;
+    margin:0;
 }
-.meniu button
-{
-    background:#ffffff;
+
+
+
+.meniu a{
+    background: #fcda9c;
     display: inline-block;
     height:60px;
     width: 150px;
     border-style: none;
-    background-size: 100%;
-}
-.meniu button:hover
-{
-    background-color:  #ccffdd;
-}
-.meniu button a
-{
+    background-size: 100%; 
+    text-decoration: none;
     color: #000;
-    font:   normal "Open Sans", sans-serif;
-    font-size: 130%;
-    text-align:    center;
-    font-color:#000;
+    font-family: 'BioRhyme', serif;
+    font-size: 100%;
+    text-align: center;
+    padding-top: 15px;
+}
 
+
+.meniu a:hover{
+    background: #ffd17b;
 }
-#logIn {
-    /*
-    background-image:url(./back2.jpg);
-    position: relative;
-    background-repeat:repeat;
-    background-size:10%;
-   */
-    background-color: aqua;
-}
+
+
 #home
 {
- background-image:url(./acasa1.jpg);    
-    background-repeat:no-repeat;
-    background-size:100%;
-    display: block;
-    height: 500px;
-    margin-bottom: 15%;
+ background-image:url(./pag1.png);
+ margin-top: 30px;
+    display: block;    
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
 
 }
-/*
-#home #titlu{
-    padding-top: 30%;
-    text-align: left;
-    font-size: 400%;
-    font-family: 'Exo 2';
 
+
+#about-title{
+    text-align: center;
+    font-size: 500%;
+    color: rgb(2, 0, 0);
+    padding-top: 60px;
+    font-family: 'Indie Flower', cursive;
+}
+#about-text{
+    font-family: 'Lobster Two', cursive;
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+    font-size: 160%;
+    color: rgb(2, 0, 0);
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+#edy{
+    margin-left: 10%;
+    margin-top: -18%;
     
-}*/
+}
+
+#oly{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#teo{
+    margin-right: 10%;
+    margin-top: -18%;
+    
+}
+
+#logIn{
+    background-image:url(./logIn.png);
+}
+
 .margin-cont{
-    position: relative;
-    left: 20%;
+    display: inline-block;
+    margin-left: 20%;
+    margin-top: 8%;
+    color: #fcda9c;
+}
+.margin-cont h1
+{
+    font-size: 300%;
+}
+.margin-cont label
+{
+    font-size: 130%;
+    margin-left:-2.5%;
 }
 
-.margin-cont div{
-    position: relative;
-    left: -30%;
-
+#radio2{
+    margin-left: 5%;
 }
 
-.margin-cont div h2{
-
-       position: relative;
-       bottom: 10px;
+.margin-cont #chenar{
+    display: inline-block;
+    height: 25px;
 }
 
-.margin-log_in {
-    position: absolute;
-    left: 70%;
-    
-
-}
-
-.margin-log_in img{
-    width: 300px;
-    height: 300px;
-}
-
-
-#chenar{
-	position: relative;
-	bottom: 20px;
-	display: inline-block;
-	height: 30px;
-	width: 150%;
-
-}
-
-.logo img{
-    position: relative;
-    left: -15%;
-    width: 20%;
-    height: 500%;
-        
+.margin-cont h2{
+    margin-bottom: -10px;
     
 }
 
-img:hover{
-background: red;
-
-}
-
-.submitButton{
-background:    #202a34;
-background:    -webkit-linear-gradient(#248eec, #202a34 50%, #248eec);
-background:    linear-gradient(#248eec, #202a34 50%, #248eec);
-border:        1px solid #556699;
-border-radius: 10px;
-box-shadow:    0 3px #444444;
-width:         100px;
-height:        30px;
-color:         #ffffff;
-display:       inline-block;
-font:          normal "Open Sans", sans-serif;
-font-size: 100%;
-text-align:    center;
-
-
-position: absolute;
-left: 65%;
-bottom: -2%;
-text-shadow:   1px 1px #000000;
-
-}
-
-.submitButton:hover {
-    background: #5b3bb3;
+.submitButton {
+    background: #f7754d;
+    border-radius: 10px;
+    text-shadow: 4px 1px 13px #666666;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #ffffff;
+    font-size: 15px;
+    padding: 3px ;
+    text-decoration: none;
+    margin-left: 80px;
+  }
+  
+  .submitButton:hover {
+    background: #af3a0c;
     text-decoration: none;
   }
 
-#LogIn{
+  #algoritm{
+ background-image:url(./algoritm.jpg);
+ margin-top: 60px;
+    display: block;    
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 
 }
