--- a/style.css
+++ b/style.css
@@ -1,3 +1,122 @@
+.margin-logIn input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+.margin-logIn #student {
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+#student:hover {
+    opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+img.avatar {
+    width: 20%;
+    border-radius: 10%;
+}
+
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+    
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%;
+     /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+}
+    
+@keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+       display: block;
+       float: none;
+    }
+    .cancelbtn {
+       width: 100%;
+    }
+}
+
 body, html,section
 {
     height: 100%;
@@ -21,7 +140,14 @@ header{
     margin:0;
 }
 
-
+#logo{
+    position: relative;
+    display: inline-block;
+    height: 45px;
+    margin-top: 0.8%;
+    margin-right: 3%;
+   
+}
 
 .meniu a{
     background: #fcda9c;
@@ -75,23 +201,24 @@ header{
     color: rgb(2, 0, 0);
     margin-right: 8%;
     margin-left: 8%;
-    margin-top: -5%
+    margin-top: -2%;
+    
 }
 
 #edy{
  display: inline-block;
- margin-top: 1%;
+ margin-top: 5%;
 
 }
 
 #oly{
-    margin-top: -1%;
+    margin-top: 1%;
 
 }
 
 #teo{
 display: inline-block;
-margin-top: 1%
+margin-top: 5%
     
 }
 
@@ -117,7 +244,7 @@ margin-top: 1%
 
 .margin-logIn{
     display: inline-block;
-    margin-right: 20%;
+    margin-right: 10%;
     margin-top: 8%;
     color: #fcda9c;
 }
@@ -134,6 +261,7 @@ margin-top: 1%
 .margin-cont .chenar{
     display: inline-block;
     height: 25px;
+    width: 190px;
 }
 
 .margin-cont h2{
@@ -141,7 +269,7 @@ margin-top: 1%
     
 }
 
-.submitButton {
+#buton.submitButton {
     background: #f7754d;
     border-radius: 10px;
     text-shadow: 4px 1px 13px #666666;
@@ -150,7 +278,8 @@ margin-top: 1%
     font-size: 15px;
     padding: 3px ;
     text-decoration: none;
-    margin-left: 80px;
+    margin-left: 140px;
+    margin-top: -50px;
   }
   
   .submitButton:hover {
@@ -159,7 +288,7 @@ margin-top: 1%
   }
 
   .contact-button{
-    margin-left:   620px;
+    margin-left:   36.5%;
     background:    #ff9900;
     background:    -webkit-linear-gradient(#ff9900, #000000);
     background:    linear-gradient(#ff9900, #000000);
@@ -209,21 +338,19 @@ margin-top: 1%
     font-family: 'Salsa', cursive;
     margin-left: 15%;
     margin-right: 5%;
-    font-size: 120%;
-   
+    font-size: 130%;
     font-weight: bold;
+    
 }
 #algoritm ul
 {
     font-family: 'Salsa', cursive;
-       margin-left: 17%;
+    margin-left: 17%;
     margin-right: 5%;
-    font-size: 120%;
-    
-      font-weight: bold;
+    font-size: 130%;
+    font-weight: bold;
+    margin-bottom: 2%;
 }
-
-
 
 #contact{
     background-image:url(./contact_back.jpg);
