--- a/responsive.css
+++ b/responsive.css
@@ -124,6 +124,158 @@ margin-right: 2%;
 }
 
 
+.margin-cont{
+    display: inline-block;
+    margin-left:350px;
+    color: #fcda9c;
+    float: center;
+
+}
+
+.margin-cont h1
+{
+    font-size: 400%;
+}
+.margin-cont label
+{
+    font-size: 230%;
+    margin-left:-2.5%;
+}
+
+.margin-cont .chenar{
+    display: inline-block;
+    height: 45px;
+    width: 220px;
+}
+
+.margin-cont h2{
+    margin-bottom: -10px;
+    font-size: 250%;
+    
+}
+
+#buton.submitButton {
+    background: #f7754d;
+    border-radius: 10px;
+    text-shadow: 4px 1px 13px #666666;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #ffffff;
+    font-size: 25px;
+    padding: 3px ;
+    text-decoration: none;
+    margin-left: 140px;
+    margin-top: -50px;
+  }
+
+
+.margin-logIn{
+    display: inline-block;
+    margin-right: 20%;
+    margin-top: 15%;
+    color: #fcda9c;
+}
+
+
+#algoritm #algoritm-titlu
+{
+    text-align: center;
+    font-size: 450%;
+    color: rgb(2, 0, 0);
+    font-family: 'Indie Flower', cursive;
+    padding-top: 20%;
+    margin-top: 0%;
+    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+}
+
+#algoritm p
+{
+    margin-top: 7%;
+    font-family: 'Salsa', cursive;
+    margin-left: 10%;
+    margin-right: 5%;
+    font-size: 180%;
+    font-weight: bold;
+    
+}
+#algoritm ul
+{
+    font-family: 'Salsa', cursive;
+    margin-left: 17%;
+    margin-right: 5%;
+    font-size: 180%;
+    font-weight: bold;
+    margin-bottom: 2%;
+}
+
+#edy-contact{
+    margin-top:25%;
+    margin-right: 35%;
+}
+#teo-contact{
+    margin-top: 30%;
+    margin-right: 10%;
+}
+#oly-contact{
+    margin-top: 10%;
+    margin-right: 10%;
+}
+
+#contact{
+    background-image:url(./contact_back.jpg);
+    margin-top:-40px;
+    display: block;    
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+   
+   }
+ 
+#contact h2{
+    font-family: 'Lobster Two', cursive;
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+    font-size: 160%;
+    color: rgb(2, 0, 0);
+    margin-left: 30%;
+    margin-right: 30%;
+    text-align: center;
+    font-size: 300%;
+    color: rgb(2, 0, 0);
+    padding-top: 190px;
+}
+
+#contact form{
+    margin-top:15%;
+    margin-left: 17%;
+}
+#contact #casuta{
+    margin-left: 15%;
+    padding: 1%;
+    display: inline-block;
+    width: 400px;
+    background-color: #ffd17b;
+    border: 100%;
+    border-color: rgb(145, 146, 146); 
+    text-decoration-style: solid;
+    text-decoration: black;
+    -webkit-text-size-adjust: 250px;
+    font-size: 150%;
+}
+#contact #mesaj{
+    margin-left: 15%;
+    padding: 1%;
+    display: inline-block;
+    width: 400px;
+    height:200px;
+    background-color: #ffd17b;
+    border-color: rgb(145, 146, 146); 
+    border-style: inset;
+    border-width: 2px;
+    font-size: 250%;
+}
 
 
 }
@@ -166,4 +318,6 @@ display: inline-block;
 margin-top: 1%
     
 }
+
+
 }
