--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     box-sizing: border-box;
 }
 
-/* Set a style for all buttons */
 .margin-logIn #student {
     color: white;
     padding: 14px 20px;
@@ -21,14 +20,14 @@
     opacity: 0.8;
 }
 
-/* Extra styles for the cancel button */
+
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
 }
 
-/* Center the image and position the close button */
+
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
@@ -49,32 +48,30 @@ span.psw {
     padding-top: 16px;
 }
 
-/* The Modal (background) */
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
     padding-top: 60px;
     
 }
 
-/* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
     width: 80%;
-     /* Could be more or less, depending on screen size */
+    
 }
 
-/* The Close Button (x) */
+
 .close {
     position: absolute;
     right: 25px;
@@ -90,7 +87,7 @@ span.psw {
     cursor: pointer;
 }
 
-/* Add Zoom Animation */
+
 .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s
@@ -106,7 +103,6 @@ span.psw {
     to {transform: scale(1)}
 }
 
-/* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
     span.psw {
        display: block;
