--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: auto;
 }
 
 #student:hover {
@@ -217,6 +217,8 @@ display: inline-block;
 margin-top: 5%
     
 }
+
+
 
 #logIn{
     background-image:url(./logIn.png);
