--- a/studentStyle.css
+++ b/studentStyle.css
@@ -1,10 +1,23 @@
-body{
-    background-color: aquamarine;
+body,html{
+    width:95%;
+    margin: 0;
+    
+}
+
+#poza{    
+    
+    width: 100%;
+   position: fixed;
+   right: 0;
+   top:0;
+    
 }
 
 #nume{
     position: relative;
-    bottom: 150px;
+    left: 5%;
+    margin-bottom: 7%;
+    padding-top: 5%;
     font-family: 'Stalinist One', cursive;
     font-size: 300%;
 }
@@ -30,10 +43,11 @@ body{
 
 .cursuri a{
     position: relative;
+    left: 6%;
     bottom:30px;
     display: inline-block;
     height:30px;
-    width: 104px;
+    width: 90px;
     border-style: none;
     background-size: 100%; 
     background:    linear-gradient(#1fd407, #01241b);
@@ -57,15 +71,17 @@ body{
 }
 
 #facebook{
+    position: relative;
     display: inline-block;
-    margin-left: 5%;
+    margin-left: 10%;
     width:5%;
     
 }
 
 #github{
+    position: relative;
     display: inline-block;
-    margin-left: 5%;
+    margin-left: 10%;
     width: 5%;
     
     
@@ -83,9 +99,8 @@ body{
     position: relative;
     display: inline-block;
     font-family: 'Denk One', sans-serif;
-    bottom: 195px;
-    margin-right: 15%;
-    float: right;
+    bottom: 150px;
+    margin-left: 40%;
     font-size: 40px;
 }
 
@@ -94,8 +109,9 @@ body{
     display: inline-block;
     float: right;
     border-collapse: collapse;
-    bottom: 80px;
-    left: 25%;
+    
+    bottom: 150px;
+    
     
     
 }
@@ -112,13 +128,13 @@ td,th{
     position: relative;
     font-family: 'Denk One', sans-serif;
     float: right;
-    top: 280px;
-    left: 800px;
+    top: 200px;
+    left: 100px;
 }
 
 #prom{
     position: relative;
-    left: 50px;
+    left: 140px;
     font-family: 'Denk One', sans-serif;
 }
 
