--- a/style.css
+++ b/style.css
@@ -6,18 +6,46 @@
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
+.margin-logIn{
+    display: inline-block;
+    margin-left:27%;
+    margin-right:50%;
+}
 
 .margin-logIn #student {
+    display: inline-block;
+    margin-top: -100%;
+    margin-left: 20%;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: auto;
+    
 }
+.prof{
+    display: inline-block;
+    width: 44%;
+    margin-top: -130%;
+    margin-left: 80%;
+
+}
+.prof:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 
 #student:hover {
     opacity: 0.8;
+}
+
+#anonim:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
+#anonim{
+    display: inline-block;
+    margin-left:-35%;
+    width:35%;
 }
 
 
@@ -40,6 +68,7 @@ img.avatar {
 }
 
 .container {
+    
     padding: 16px;
 }
 
@@ -68,7 +97,7 @@ span.psw {
     background-color: #fefefe;
     border: 1px solid #888;
     width: 80%;
-    
+    margin-left: 10%;
 }
 
 
@@ -121,7 +150,7 @@ body, html,section
 }
 
 
-header{
+#PC{
     overflow: hidden;
     display:block;
     height:60px;
@@ -134,6 +163,9 @@ header{
     border-right: 0px;
     border-style:solid;
     margin:0;
+}
+#resp{
+    display: none;
 }
 
 #logo{
@@ -439,4 +471,43 @@ margin-top: 5%
 {
     margin-right: 30%;
     
+}
+
+#grupa{
+    display:none;
+}
+
+@media screen and (max-width: 376px){
+    .meniu{
+        display: none;
+    }
+    #PC{
+        display: none;
+    }
+   
+    #resp{
+        overflow: hidden;
+        display:block;
+        height:60px;
+        width: 100%;
+        background: #fcda9c;
+        position: fixed;
+        top:0%;
+        border-top: 0px;
+        border-left: 0px;
+        border-right: 0px;
+        border-style:solid;
+        margin:0;
+    }
+    .menu__button{
+    
+        display: inline-block;
+        border-radius: 5px;
+        background: none;
+        margin-left: 5%;
+        
+       
+    }
+    
+
 }
