--- a/profesorStyle.css
+++ b/profesorStyle.css
@@ -33,7 +33,7 @@ body,html{
     text-shadow:   1px 1px #000000;
 
  }
- #logOutS{
+ /* #logOutS{
      position: absolute;
      margin-left: 90%;
      background:    linear-gradient(#23a9e7, #000000);
@@ -46,7 +46,7 @@ body,html{
      text-align:    center;
      text-shadow:   1px 1px #000000;
 
-  }
+  } */
 #profil{
     position: absolute;
     top: 35%;
